# Fire-Fighting-Robot

./: .gitignore  Flask_app.py  Motor Mapping Table.xlsx  Pi_motor_control.py  README.md  auto_update.sh  build_and_run.sh  channel_mapping_client.py  channel_mapping_host.py  code_full_content.txt  code_scan_summary.txt  create_directories.sh  create_servo_package.py  dump_local_repo.py
Cad Files/: Trigger mechanism (v21~recovered).step
Motor Channel Mapping/: channel_mapping_host.py
ROS_packages/actuator_controller/: package.xml  setup.cfg
ROS_packages/actuator_controller/launch/: actuator_launch.py
ROS_packages/actuator_interfaces/: package.xml
ROS_packages/fire_fighting_robot_bringup/: package.xml
ROS_packages/fire_fighting_robot_bringup/launch/: robot_bringup.launch.py
ROS_packages/mlx90640_driver/: setup.py
ROS_packages/mlx90640_driver/config/: thermal_camera.yaml
ROS_packages/mlx90640_driver/resource/: thermal_camera_node
ROS_packages/pca9685_interfaces/srv/: SetMotor.srv
ROS_packages/pca9685_motor_driver_py/pca9685_motor_driver_py/: motor_driver_node.py
ROS_packages/servo_controller_py/: setup.cfg
ROS_packages/servo_controller_py/config/: servo_config.yaml
ROS_packages/servo_controller_py/servo_controller_py/: servo_controller_node.py
ROS_packages/servo_interfaces/msg/: ServoState.msg
ROS_packages/servo_interfaces/srv/: SetServoPosition.srv  SetServoSpeed.srv
ROS_packages/system_monitor/: README.md  code_scan_summary.txt  setup.cfg
ROS_packages/system_monitor/msg/: NetworkStats.msg  ProcessInfo.msg  SystemLoad.msg
Test_folder/: system_monitor.py
Test_folder/Aiming_system/: Arduino_Aiming_Mechanism_Code.ino  demo_python.py
Test_folder/Camera_Test/D435/: demo.py  depth_test.py  power_test.py  usb_reset.py
Test_folder/Camera_Test/Thermal_Camera_test/: save_frame_local.py  thermal_frames.csv
Test_folder/Camera_Test/Thermal_Camera_test/D435/: demo.py
Test_folder/Image Processing/: depth_camera_main.py
Test_folder/Motor Channel Mapping/: channel_mapping_host.py
Test_folder/Thermal_Camera_test/: thermal_camera_test.py
Test_folder/Trigger_system/: WS_control.py  demo.py
Test_folder/lidar/: YDLidar_G2_test.py
Thermal_Camera_test/: short_CRC_test.py  thermal_camera_test.py
actuator_controller/: setup.py
actuator_controller/actuator_controller/: actuator_node.py  test_actuator.py
actuator_controller/config/: actuator_config.yaml
actuator_interfaces/: CMakeLists.txt
actuator_interfaces/srv/: SetActuator.srv
docs/: COMMON_CODES.md  README.md
fire_fighting_robot_bringup/: CMakeLists.txt  setup.py
fire_fighting_robot_bringup/launch/: robot_bringup.launch.py
launch/: CMakeLists.txt  package.xml
mlx90640_driver/: code_full_content.txt  code_scan_summary.txt  code_scanner.py  package.xml  setup.py
mlx90640_driver/launch/: thermal_camera_launch.py
mlx90640_driver/mlx90640_driver/: thermal_camera_node.py
mlx90640_driver/resource/: mlx90640_driver  thermal_camera_node
mlx90640_interfaces/: CMakeLists.txt  package.xml
mlx90640_interfaces/msg/: ThermalFrame.msg
mlx90640_interfaces/srv/: GetThermalFrame.srv
pca9685_interfaces/: CMakeLists.txt  package.xml
pca9685_motor_driver_py/: package.xml  setup.cfg  setup.py
pca9685_motor_driver_py/config/: motor_map.yaml
pca9685_motor_driver_py/launch/: motor_driver_launch.py
pca9685_motor_driver_py/pca9685_motor_driver_py/: motor_driver_node.py
pca9685_motor_driver_py/srv/: SetMotor.srv
robot-dashboard/: code_full_content.txt  code_scan_summary.txt  code_scanner.py  dashboard_scan.txt  dashboard_scanner.py  quick_test_automation.py  requirements.txt  run.py  scan_output.txt
robot-dashboard/backend/: __init__.py  automation.py  automation_aiming.py  automation_v2.py  config_manager.py  host_backend.py  pi_backend.py  ros_bridge.py  server.py
robot-dashboard/backend/motors/: actuator_control.py  motor_controller.py  motor_routes.py  servo_control.py
robot-dashboard/backend/sensors/: __init__.py  lidar.py  servo_control.py  system_monitor.py  thermal_camera.py
robot-dashboard/frontend/: index.html  motor.js
robot-dashboard/frontend/templates/: aiming_system.html  dashboard_home.html  index.html  lidar_visualization.html  motor_control.html  thermal_camera.html
robot-dashboard/scripts/: run-pi-backend.sh
servo_controller_py/: package.xml  setup.py
servo_controller_py/config/: servo_config.yaml
servo_controller_py/launch/: servo_controller_launch.py
servo_controller_py/servo_controller_py/: servo_controller_node.py
servo_interfaces/: CMakeLists.txt  package.xml
servo_interfaces/msg/: ServoPosition.msg
system_monitor/: CMakeLists.txt  package.xml  setup.py
system_monitor/launch/: system_monitor_launch.py
system_monitor/msg/: DiskUsage.msg  SystemStatus.msg
system_monitor/system_monitor/: system_info_publisher.py  system_monitor_node.py
