<?xml version="1.0"?>
<package format="3">
  <name>fire_fighting_robot</name>
  <version>0.0.1</version>
  <description>Fire Fighting Robot Package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>pca9685_motor_driver_py</exec_depend>
  <exec_depend>ydlidar_ros2_driver</exec_depend>
  <exec_depend>mlx90640_driver</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>