<?xml version="1.0"?>
<package format="3">
  <name>pca9685_interfaces</name>
  <version>0.0.0</version>
  <description>Service definitions for the PCA9685 motor driver.</description>

  <maintainer email="zcemuex@ucl.ac.uk">Yang Yue</maintainer>
  <license>MIT</license>

  <!-- build / interface dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- *** THIS is the line that matters *** -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
