[develop]
script_dir=$base/lib/pca9685_motor_driver_py

[install]
install_scripts=$base/lib/pca9685_motor_driver_py

# ───────────────────────────────────────────────
# Extra metadata for setuptools / ament
# ───────────────────────────────────────────────
[options]
# your Python package lives in the same-name folder
packages = find:
install_requires = setuptools
package_dir =
    = .

# tell colcon which non-Python files must be installed
data_files =
    # index entry so ROS can discover the package
    share/ament_index/resource_index/packages = resource/pca9685_motor_driver_py
    # package-level files
    share/${PROJECT_NAME} = package.xml
    # launch, config, and custom service definition
    share/${PROJECT_NAME}/launch = launch/motor_driver_launch.py
    share/${PROJECT_NAME}/config = config/motor_map.yaml
    share/${PROJECT_NAME}/srv    = srv/SetMotor.srv
